--- a/TP2/frontend/src/index.css
+++ b/TP2/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav ul{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+nav ul li{
+  padding: 24px;
+  list-style:none;
+}
