--- a/TP2/frontend/src/index.css
+++ b/TP2/frontend/src/index.css
@@ -12,9 +12,17 @@ code {
     monospace;
 }
 
+nav{
+ height:72px;
+}
+
 nav ul{
   display: flex;
   justify-content: space-evenly;
+}
+
+ul{
+  margin: auto;
 }
 
 ul li{
@@ -28,15 +36,26 @@ form {
 max-width: 400px;
   margin: auto;
 }
+
 input, button {
   margin: 10px 0;
   padding: 10px;
   border-radius: 5px;
+}
+
+input{
   border: 1px solid #0022e0;
 }
+
 button {
-  background-color: #007bff;
+  background-color: #525461;
   color: white;
   cursor: pointer;
+  margin:0.5em;
+  border:none;
+}
+
+footer{
+  height:120px;
 }
 
