--- a/TP2/frontend/src/App.css
+++ b/TP2/frontend/src/App.css
@@ -78,7 +78,7 @@ form {
   display: flex;
   flex-direction: column;
   max-width: 500px;
-  margin: 1.5em auto;
+  margin: 2em auto;
   padding: 1em 1.5em;
   border-radius: 8px;
   gap: 0.7em;
@@ -104,7 +104,7 @@ button {
 }
 
 div label{
-padding:2em 1em;
+padding:1em;
 }
 
 /* Messages */
@@ -145,8 +145,14 @@ h2{
   color: #fff;
 }
 
+h2 span{
+  font-size:0.75em;
+  margin-left:0.25em;
+  padding-bottom:0.5em;
+}
+
 h2.accordion-trigger{
-font-size:1.5em;
+font-size:1.25em;
 margin-bottom:1em;
 }
 
@@ -258,9 +264,10 @@ margin-top:2em;
   margin: 0 auto 2em auto;
 }
 /* Filter List */
-.accordion-content{
-
+.accordion-block:last-of-type {
+  margin-bottom: 2.5em;
 }
+
 .filter-list {
   display: flex;
   justify-content: center;
