--- a/TP2/frontend/src/App.css
+++ b/TP2/frontend/src/App.css
@@ -86,11 +86,9 @@ form {
   gap: 0.7em;
 }
 
-input,
-button {
-  margin: 10px 0;
-  padding: 10px;
-  border-radius: 5px;
+input {
+  padding: 0.75rem;
+  border-radius: 0.25rem;
 }
 
 input {
@@ -98,11 +96,20 @@ input {
 }
 
 button {
-  background-color: #6e749a;
+  background: #3a3e69;
   color: white;
   cursor: pointer;
   border: none;
+  border-radius: 0.25rem;
+  font-weight: 600;
+  font-size:0.9rem;
+  padding:0.5rem 1rem;
   margin: 0.5em 0;
+  transition:all 0.35s;
+}
+
+button:hover{
+  background-color: #6e749a;
 }
 
 div label{
