--- a/TP2/frontend/src/App.css
+++ b/TP2/frontend/src/App.css
@@ -80,16 +80,17 @@ nav ul li {
 form {
   display: flex;
   max-width: 500px;
-  margin: 2em auto;
-  padding: 2em;
   border-radius: 8px;
   gap: 0.7em;
   justify-content: center;
-
+  align-items: center;
+  margin: 2rem auto 0 auto;
 }
 
 form:not(.search) {
   flex-direction: column;
+  margin: 2em auto;
+  padding: 2em;
   border: 1px solid #525461;
 }
 
@@ -97,29 +98,7 @@ form div {
   display: flex;
   gap: 2rem;
   flex-direction: column;
-align-items: center;
-}
-
-label {
-  font-weight: 700;
-}
-
-.search label {
-  display: none;
-}
-
-input,
-textarea {
-  padding: 0.75rem;
-  border-radius: 0.25rem;
-  margin-bottom: 1.5rem;
-  border: 1px solid #939dd9;
-  max-width:100%;
-}
-
-.preview {
-  max-height: 120px;
-  max-width: 50%;
+  align-items: center;
 }
 
 button {
@@ -139,23 +118,52 @@ button:hover {
   background-color: #6e749a;
 }
 
+.search button{
+  padding: 1rem;
+  margin-bottom:2rem;
+  margin-left:-1rem;
+}
+
+label {
+  font-weight: 700;
+}
+
 div label {
   padding: 1em;
 }
+
+.search label {
+  display: none;
+}
+
+input,
+textarea {
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+  margin-bottom: 1.5rem;
+  border: 1px solid #939dd9;
+  max-width: 100%;
+}
+
+.preview {
+  max-height: 120px;
+  max-width: 50%;
+}
+
 
 /* Messages */
 .message {
   position: fixed;
   top: 6rem;
-  left:2.5vw;
-  z-index:5;
+  left: 2.5vw;
+  z-index: 5;
   margin: 0 auto 3em auto;
   padding: 2em;
   border-radius: 6px;
   font-weight: bold;
   text-align: center;
   transition: all 0.5s;
-  width:95vw;
+  width: 95vw;
 }
 
 .message.success {
@@ -199,6 +207,7 @@ h2 span {
 
 h2.accordion-trigger {
   font-family: 'Montserrat', Arial, sans-serif;
+  font-weight: 600;
   font-size: 1em;
   margin-bottom: 1em;
 }
@@ -219,6 +228,10 @@ h3 {
   font-size: 1.25em;
   color: white;
   font-weight: 800;
+}
+
+strong{
+  color: #939dd9;
 }
 
 /* Footer */
@@ -416,9 +429,9 @@ thead {
     max-width: 98vw;
   }
 
-  form div{
-flex-direction: column;
-align-items: center;
+  form div {
+    flex-direction: column;
+    align-items: center;
   }
 
   .drink-details,
