--- a/TP2/frontend/src/App.css
+++ b/TP2/frontend/src/App.css
@@ -15,13 +15,13 @@ code {
 }
 
 /* Typography & Links */
-.App {
+.app {
   background-color: #15171d;
   color: #e6f0ff;
   text-align: center;
 }
 
-.App-link,
+.app-link,
 a {
   color: #e6f0ff;
   text-decoration: none;
@@ -29,7 +29,7 @@ a {
 }
 
 /* App Header */
-.App-header {
+.app-header {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -38,13 +38,13 @@ a {
   border-bottom: 1px solid #525461;
 }
 
-.App-logo {
+.app-logo {
   height: 30vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .app-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
